--- a/site/layouts/partials/2-up.html
+++ b/site/layouts/partials/2-up.html
@@ -13,7 +13,7 @@
     </div>
 
     <div class="tc">
-      <a href="/products" class="btn raise">See all products</a>
+      <a href="https://github.com/Ether1Project/ECPs" class="btn raise">ECP Github</a>
     </div>
   </div>
 </div>
