--- a/site/layouts/partials/text-and-image.html
+++ b/site/layouts/partials/text-and-image.html
@@ -6,15 +6,15 @@
 				<h2 class="f2 b lh-title mb2">{{.heading}}</h2>
 
 				<p>{{.text}}</p>
+
+				<br>
+
 			</div>
 
-			<div class="w-60-l ph2-l">
-				<img src="img/home-about-section.jpg" alt="" class="mb3">
-			</div>
 		</div>
 
 		<div class="tc">
-			<a href="{{.buttonLink}}" class="btn raise">{{.buttonText}}</a>
+			<a href="/post" class="btn raise">Read Approved ECPs</a>
 		</div>
 
 	</div>
