--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -24,9 +24,8 @@
 
 	<!-- Open Graph -->
 	<meta property="og:type" content="business.business">
-	<meta property="og:title" content="Kaldi | Great coffee with a conscience">
+	<meta property="og:title" content="ECPs | Improving Ether-1">
 	<meta property="og:url" content="/">
-	<meta property="og:image" content="/img/og-image.jpg">
 
   {{ if .IsHome }}
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
