SM updates and small changes

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -13,9 +13,7 @@
 				</ul>
 				<h3 class="f4 b lh-title mb2 primary">Social media</h3>
 				<ul class="mhn2">
-					{{ partial "social-icon" (dict "link" "#" "svg" "icons-facebook") }}
-					{{ partial "social-icon" (dict "link" "#" "svg" "icons-twitter") }}
-					{{ partial "social-icon" (dict "link" "#" "svg" "icons-instagram") }}
+					{{ partial "social-icon" (dict "link" "https://twitter.com/Ether1Official/" "svg" "icons-twitter") }}
 				</ul>
 			</div>
 
