--- a/site/layouts/partials/text-and-image.html
+++ b/site/layouts/partials/text-and-image.html
@@ -14,7 +14,7 @@
 		</div>
 
 		<div class="tc">
-			<a href="/post" class="btn raise">Read Approved ECPs</a>
+			<a href="/post" class="btn raise">Read All ECPs</a>
 		</div>
 
 	</div>
