Rebrand and Council list update

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -5,9 +5,9 @@
 		<div style="margin-right: auto; margin-left: auto; text-align: center;">
 
 			<div>
-				<h3 class="f4 b lh-title mb1 primary">Ether-1</h3>
+				<h3 class="f4 b lh-title mb1 primary">ETHO Protocol</h3>
 				<ul class="mb3">
-					<li><a href="https://ether1.org" class="link">Ether-1 Website</a></li>
+					<li><a href="https://ether1.org" class="link">ETHO Protocol Website</a></li>
 					<li><a href="/" class="link">Home</a></li>
 					<li><a href="/post" class="link">ECPs</a></li>
 				</ul>
