--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -24,7 +24,7 @@
 
 	<!-- Open Graph -->
 	<meta property="og:type" content="business.business">
-	<meta property="og:title" content="ECPs | Improving Ether-1">
+	<meta property="og:title" content="ECPs | Improving ETHO Protocol">
 	<meta property="og:url" content="/">
 
   {{ if .IsHome }}
